--- a/Backend/appsettings.Local.json
+++ b/Backend/appsettings.Local.json
@@ -7,6 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=ContactApp;Integrated Security=True;"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=ContactApp;Integrated Security=True;",
+    "RedisConnection": "localhost:6379,user=simpleuser,password=passwordforMF1,ssl=False,abortConnect=False"
+  },
+  "Switches": {
+    "DeleteRetiredLookbackDays":  30 
+  } ,
+  "Hangfire": {
+    "RedisDatabase": 2
   }
 }
