--- a/UI/contactApp/package.json
+++ b/UI/contactApp/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngrx/effects": "^15.3.0",
+    "@ngrx/entity": "^15.3.0",
+    "@ngrx/router-store": "^15.3.0",
+    "@ngrx/store": "^15.3.0",
+    "@ngrx/store-devtools": "^15.3.0",
+    "lodash": "^4.17.21",
+    "ngrx-store-freeze": "^0.2.4",
+    "ngrx-store-localstorage": "^15.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
@@ -30,6 +38,7 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.191",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
